# onlime

./: .gitignore  ADB_Samsung_Galaxy_S26_Ultra_데이터_추출_가이드.md  ARCHITECTURE-v3.md  ARCHITECTURE.md  SPEC.md  android_apk_개발_리서치.md  com.onlime.daemon.plist  competitive_analysis.md  onlime.toml.example  package-lock.json  package.json  personal_context.example.yaml  pyproject.toml  tsconfig.json  weekly_briefing_0323_0330.md  끝나면다시돌아올게.md  수집 시스템 기획.md  카카오톡_자동화_가이드.md
past/: config.py  daily_note.py  (+5 more)
과거(~2026.04.04.)/: RESEARCH-agent-execution.md  SOUL.md  com.onlime.daemon.plist  contacts.csv  onlime.toml.example  pyproject.toml  대표님들, 같이 철학합시다.md  이승석 모음.md  초인같이, 태풍같이, 페인트같이.md
과거(~2026.04.04.)/config/: onlime.example.json
과거(~2026.04.04.)/past/: extract_plaud_token.py  fix_meeting_notes.py  fix_participants.py  matcher.py  migrate_to_meeting.py  plaud_sync.py  process_all_plaud.py  state.py  vault_io.py
과거(~2026.04.04.)/past/webapp/: extract_quests.py
과거(~2026.04.04.)/past/webapp/data/: quests.json  vault_graph.json
과거(~2026.04.04.)/past/webapp/js/: data.js  graph3d.js
과거(~2026.04.04.)/scripts/: android_automation_research.md  install_launchd.py  privacy_security_legal_research.md  scrape_threads.py  setup_plaud.py  telegram_auth.py  termux_capture.py  weekly_review.py
과거(~2026.04.04.)/src/: enricher.ts  index.ts  notify.ts  rebuild-index.ts  writer.ts
과거(~2026.04.04.)/src/_v1_backup/: kakao-monitor.ts  obsidian-writer.ts  summarizer.ts
과거(~2026.04.04.)/src/ai/: summarizer.ts
과거(~2026.04.04.)/src/collectors/: gcal.ts  gmail-mcp.ts  gmail.ts  kakao.ts
과거(~2026.04.04.)/src/onlime/: __init__.py  __main__.py  cli.py  engine.py
과거(~2026.04.04.)/src/onlime/api/: auth.py  models.py  server.py
과거(~2026.04.04.)/src/onlime/api/routes/: calendar.py  ingest.py  notes.py  recordings.py
과거(~2026.04.04.)/src/onlime/config/: __init__.py
과거(~2026.04.04.)/src/onlime/connectors/: kakao.py  registry.py  telegram_conn.py  workenv.py
과거(~2026.04.04.)/src/onlime/monitoring/: health.py
과거(~2026.04.04.)/src/onlime/outputs/: base.py  daily_note.py  daily_summary.py  standalone_note.py  templates.py
과거(~2026.04.04.)/src/onlime/processors/: insight.py  models.py  summarizer.py
과거(~2026.04.04.)/src/onlime/vault/: index.py  io.py  matcher.py
과거(~2026.04.04.)/src/scripts/: pre-meeting.ts
과거(~2026.04.04.)/templates/: meeting.md.j2  standalone.md.j2  transcript.md.j2
과거(~2026.04.04.)/web/: next.config.ts
과거(~2026.04.04.)/web/src/app/: globals.css
(+163 files in other folders)
