[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onlime"
version = "0.1.0"
description = "Personal AI workflow system: collect data from multiple sources, process with AI, and organize in Obsidian"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "httpx>=0.28.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "tomli>=2.0; python_version < '3.12'",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "slack-sdk>=3.23",
    "pyrogram>=2.0",
    "tgcrypto>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
[project.scripts]
onlime = "onlime.cli:cli"
onlime-server = "onlime.api.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/onlime"]
